# SFML-Ppoyect

./: CMakeLists.txt  Menu.cpp  Puntajes.txt  README.md  Tabla.txt  main.cpp  main.h
Clases/: Animacion.cpp  Animacion.h  Animator.cpp  Animator.h  Ataque.cpp  Ataque.h  Coin.cpp  Coin.h  Game.h  GameOver.cpp  GameOver.h  LinkedList.h  MapaTMX.h  Puntaje.cpp  Puntaje.h  Vida.cpp  Vida.h  enemigos.cpp  enemigos.h  maniMenu.cpp  maniMenu.h  personaje.cpp  personaje.h  personaje1.cpp  personaje1.h
assets/: mapa lauti.tmx
assets/Mapa/: Mapa.tmx  mapaFinal.tmx
assets/Mapa2/: mapa lauti.tmx
docs/: especificacion.md
